--- a/website/apps/abcast/templates/abcast/emission_detail.html
+++ b/website/apps/abcast/templates/abcast/emission_detail.html
@@ -50,7 +50,7 @@
                             <div class="list_body">
                                 {% for item in object.get_timestamped_media %}
                                     {% if item.content_type.model == "media" %}
-                                        {% if item.is_future %}
+                                        {% if item.is_future == "foo" %}
                                             <div class="item hidden-future">
                                                 <div class="inner icon">
                                                     <i class="icon-question"></i>
